fixed color contrast issues

--- a/about.css
+++ b/about.css
@@ -134,7 +134,7 @@ header div.w3-bar-item {
 }
 
 .logo:hover {
-  font-size: 2.3em;
+  font-size: 2.2em;
 }
 
 a.contact:nth-child(2) {
