--- a/footer.css
+++ b/footer.css
@@ -120,7 +120,7 @@ footer a:hover {
 } */
 
 .heart {
-  color: #54B2BA;
+  color: #067975;
 }
 
 footer div.w3-bar.w3-padding-24 {
