--- a/main.css
+++ b/main.css
@@ -175,6 +175,7 @@ header {
   font-size: 20px;
   line-height: 2;
   margin-top: 10px;
+  font-weight: bold;
 }
 
 .hero-text button {
@@ -196,7 +197,7 @@ header {
 }
 
 .hero-text button:hover {
-  background-color: #9181A7;
+  background-color: #5C396F;
   color: var(--main-background-color);
 }
 
@@ -211,7 +212,6 @@ header {
   grid-auto-rows: minmax(150px, auto);
   /* padding: 40px 5px 20px 5px; */
   align-items: center;
-  justify: center;
   width: 100%
 }
 
@@ -261,23 +261,6 @@ img {
   box-shadow: 5px 5px 6px grey;
 }
 
-/* div.work-container:nth-child(1) {
-  grid-column: 1;
-  grid-row: 1;
-} */
-/* .hover-zoom {
-  -webkit-transition: transform .2s;
-  -o-transition: transform .2s;
-  transition: transform .2s;
-  width: 278px;
-  height: 200px;
-  margin: 0 auto;
-}
-
-.hover-zoom:hover {
-  transform: scale(1.3);
-} */
-
 /* ----- SEE ALL PROJECTS BUTTON ----- */
 .work-button {
   font-family: var(--body-font);
@@ -307,9 +290,8 @@ body > main:nth-child(1) > a:nth-child(3) {
 }
 
 .work-button:hover {
-  background-color: #9181A7;
+  background-color: #5C396F;
   color: var(--main-background-color);
-  /* color: #5C396F; */
   text-decoration: none;
 }
 
