--- a/work.css
+++ b/work.css
@@ -107,13 +107,15 @@ body {
   background-color: var(--main-background-color);
 }
 
+main {
+  margin-bottom: 50px;
+}
+
+/* ----- HEADER END ------ */
+
 header {
   background-color: #5C396F;
   color: var(--main-background-color);
-}
-
-main {
-  margin-bottom: 50px;
 }
 
 .w3-button:hover {
@@ -131,7 +133,7 @@ main {
 }
 
 .logo:hover {
-  font-size: 2.3em;
+  font-size: 2.2em;
 }
 
 a.contact:nth-child(2) {
@@ -152,6 +154,8 @@ a.work {
   font-family: var(--header-font);
   color: #66c3cb;
 }
+
+/* ----- HEADER END ------ */
 
 /* ----- DESIGNS ------ */
 .design-container {
@@ -209,7 +213,8 @@ div.text a {
 
 div.text a:hover {
   color: #54B2BA;
-  text-decoration: none;
+  text-underline-position: under;
+  text-decoration: underline #54B2BA 2px;
 }
 
 img {
